- add a consistent padding for all the buttons - add a background color to the message (to be more readable) - fix, higher value in high-score is better - fix, make the map editor work again

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ body
 .button
     {
     cursor: pointer;
+    padding: 5px 25px;
     }
 
 .button:hover
@@ -33,6 +34,7 @@ body
 
 #Message
     {
+    background-color: black;
     font-size: 1.5em;
     text-align: center;
     cursor: default;
@@ -52,11 +54,6 @@ body
     align-content: center;
     align-self: center;
     height: 100%;
-    }
-
-#MainMenu-buttons > *
-    {
-    padding: 5px 25px;
     }
 
     /* Select Map */
@@ -140,9 +137,4 @@ body
     background-color: rgba(100, 100, 255, 0.5);
     border-radius: 5px;
     padding: 0 8px;
-    }
-
-#GameMenu-right > *
-    {
-    padding: 0 15px;
     }
